--- a/app/src/main/res/layout/newsfeed.xml
+++ b/app/src/main/res/layout/newsfeed.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:backgroundTint="#3b5998"
-            app:cardCornerRadius="20dp"
-            android:layout_marginLeft="350dp">
-
-            <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:backgroundTint="#3b5998"
-                app:srcCompat="@mipmap/profile" />
-
-        </androidx.cardview.widget.CardView>
-
-
+        android:gravity="end"
+        android:orientation="vertical">
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/profile" />
 
     </LinearLayout>
     <LinearLayout
@@ -44,35 +30,33 @@
             android:src="@mipmap/sun"
             />
         <TextView
-            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sunday, 21 Novembwe"
+            android:text="Mon 22 Nov"
             android:layout_marginLeft="05dp"
             />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hi, Grace"
+        android:text="Hi, Grace!!"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginLeft="30dp"
         android:textSize="25dp"/>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="199dp"
-        android:backgroundTint="#cccccc"
-        app:cardCornerRadius="40dp"
-        android:layout_margin="25dp">
+        android:layout_height="200dp"
+        android:backgroundTint="#8e8e8e"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="30dp">
 
         <ImageButton
-            android:id="@+id/imageButton6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:background="@color/material_on_background_disabled"
             app:srcCompat="@mipmap/polygon" />
 
@@ -80,7 +64,7 @@
             android:id="@+id/editTextTextPersonName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:layout_margin="65dp"
             android:inputType="textPersonName"
             android:text="84"
             android:paddingStart="15dp"
@@ -125,7 +109,7 @@
             android:textStyle="bold"
             android:textSize="18dp"
             android:background="@color/material_on_background_disabled"
-            android:textColor="#3366ff"/>
+            android:textColor="@color/black"/>
 
     </androidx.cardview.widget.CardView>
     <LinearLayout
@@ -140,94 +124,113 @@
             android:layout_marginLeft="30dp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
             android:text="Metrices"/>
 
-        <ImageButton
-            android:id="@+id/imageButton7"
-            android:layout_width="100dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="230dp"
-            android:layout_marginTop="60dp"
-            android:scaleType="fitCenter"
-            android:background="@color/material_on_background_disabled"
-            app:srcCompat="@mipmap/more" />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:orientation="vertical"
         android:background="#f5f5f0"
-        android:weightSum="2">
+        >
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:orientation="horizontal">
+
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
-                android:backgroundTint="#3333ff"
                 android:layout_margin="10dp"
-                app:cardCornerRadius="50dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+
+                android:backgroundTint="#003d99"
+                app:cardCornerRadius="50dp">
+
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:gravity="center">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Calories"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:textSize="18dp"/>
-                    <TextView
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:src="@mipmap/piechart"/>
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="500 cal"/>
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="120dp"
-                app:cardCornerRadius="50dp"
-
-                android:layout_margin="10dp"
-                android:background="#8080ff"
-                android:backgroundTint="#8080ff"
-                android:layout_weight="1">
-                <LinearLayout
-                    android:background="#8080ff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="CALORIES"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
+                         />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
-                        android:src="@mipmap/chart"/>
+                        android:src="@mipmap/piechart" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Weight"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:textSize="18dp"/>
+                        android:text="500 Cal"
+                        android:textColor="@color/white" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="58 kg"/>
+                        android:text="last update 3 m"
+                        android:textColor="@color/white"
+                        android:textSize="15dp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="120dp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+
+                android:backgroundTint="#003d99"
+                app:cardCornerRadius="50dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="WEIGHT"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:src="@mipmap/chart" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="58KG"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="last update 3 d"
+                        android:textColor="@color/white"
+                        android:textSize="15dp" />
 
                 </LinearLayout>
 
@@ -253,7 +256,8 @@
                 android:layout_height="120dp"
                 android:layout_margin="10dp"
                 app:cardCornerRadius="50dp"
-                android:backgroundTint="#0066ff"
+
+                android:backgroundTint="#003d99"
                 android:layout_weight="1">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -262,24 +266,36 @@
                     android:orientation="vertical"
                     android:gravity="center">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="WATER"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        />
+
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="46dp"
-                        android:src="@mipmap/waterglass" />
+                        android:layout_height="40dp"
+                        android:src="@mipmap/waterglass"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Water"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:textSize="18dp"/>
+                        android:text="570 ml"
+                        android:textColor="@color/white"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="750 ml"/>
+                        android:text="last update 3 d"
+                        android:textSize="15dp"
+                        android:textColor="@color/white"/>
 
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
@@ -294,21 +310,32 @@
                     android:layout_gravity="center"
                     android:orientation="vertical"
                     android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="STEPS"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                         />
+
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="50dp"
+                        android:layout_height="40dp"
                         android:src="@mipmap/exercise"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Steps"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:textSize="18dp"/>
+                        android:text="9,890"
+                        android:textColor="@color/white"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="9,890"/>
+                        android:text="last update 3 m"
+                        android:textSize="15dp"
+                        android:textColor="@color/white"/>
 
                 </LinearLayout>
 
